Error q salta de listas cambiado