@@ -2,9 +2,11 @@ package com.proyecto.comparadorProyecto.services;
 
 import com.proyecto.comparadorProyecto.buscador.Supermercado;
 import com.proyecto.comparadorProyecto.dto.ProductoDto;
+import lombok.AllArgsConstructor;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -15,18 +17,21 @@ import java.util.stream.Collectors;
 // de tipo @Configuration o el @Component
 @Service
 // Crea un constructor con los atributos de la clase finales no inicializados como argumentos, en este caso, dia, carrefour, y mercadona
-@RequiredArgsConstructor(onConstructor_ = @Autowired)
+@RequiredArgsConstructor
 public class ComparadorService {
     private final List<Supermercado> supermercados;
 
-    public List<ProductoDto> obtenerListaProductosComparados(String producto, String tipo) {
-        return ordenarListaPorPrecio(producto, tipo);
+    public List<ProductoDto> obtenerListaProductosComparadosTotal(String producto) {
+        return ordenarListaPorPrecio(producto, supermercados);
     }
 
-    public List<ProductoDto> ordenarListaPorPrecio(String producto, String tipo) {
+    public List<ProductoDto> obtenerListaProductosComparadosConcreto(String producto, String supermercadosString) {
+        return ordenarListaPorPrecio(producto, obtenerSupermercados(supermercadosString));
+    }
 
+    public List<ProductoDto> ordenarListaPorPrecio(String producto, List<Supermercado> listaSupermercados) {
         // Lanzar todas las peticiones en paralelo
-        List<CompletableFuture<List<ProductoDto>>> asyncSupermercados = supermercados
+        List<CompletableFuture<List<ProductoDto>>> asyncSupermercados = listaSupermercados
                 .stream()
                 .map(supermercado -> supermercado.obtenerListaSupermercado(producto)
                         .exceptionally(e -> {
@@ -37,13 +42,12 @@ public class ComparadorService {
                 .toList();
 
         // Bloqueamos para esperar a que todas las peticiones terminen
-        CompletableFuture.allOf(asyncSupermercados.toArray(new CompletableFuture[supermercados.size()])).join();
+        CompletableFuture.allOf(asyncSupermercados.toArray(new CompletableFuture[listaSupermercados.size()])).join();
 
         // Obtenemos todos los resultados y lo incluimos en una única lista
         List<ProductoDto> listaCombinadaSupermercados = asyncSupermercados.stream()
                 .flatMap(lista -> lista.join().stream())
                 .collect(Collectors.toList());
-
 
         return ordenacionLista(listaCombinadaSupermercados);
     }
@@ -53,7 +57,18 @@ public class ComparadorService {
                 .comparing((ProductoDto prod) -> prod.getPrioridad())
                 .thenComparing((ProductoDto producto) -> producto.getPrecioGranel()));
 
-        return listaProductos.stream().limit(20).collect(Collectors.toList());
+        return listaProductos.stream().collect(Collectors.toList());
+    }
+
+    public List<Supermercado> obtenerSupermercados(String supermercadosString){
+        List<String> supermercadosSeleccionados = Arrays.stream(supermercadosString.split("-")).toList();
+        List<Supermercado> filtrados = supermercados.stream()
+                .filter(s -> {
+                    String nombre = s.getClass().getSimpleName();
+                    return supermercadosSeleccionados.contains(nombre);
+                })
+                .collect(Collectors.toList());
+        return filtrados;
     }
 
 }
